add: modulos de venta y administracion por rol